test/resources/typer/failing/CallError9.scala
object Call {
    L.Cons(1, L.Nil(), 2)
}